# cath_simulator

./: CMakeLists.txt  cath_sim.cpp
python-scripts/: Test Points  Traced_anatomical_model.dxf  curve_projection.ipynb  dxf_eval.py  point_plotter.py  svg_eval.py
python-scripts/stl_extraction/: STL_extraction.ipynb  circle_split.stl  circle_split.txt  neuro_model.stl  neuro_model.txt  neuro_model_channel.stl  neuro_model_half.stl  neuro_model_half.txt  neuro_model_half_rotated.stl  neuro_model_half_rotated.txt  neuro_model_poly.txt  neuro_model_solid.stl  simple_environment.txt  simple_environment_offset.txt  simple_split.stl  simple_split.txt  squares.txt  stand_in_environment.txt  test_part.stl  test_part.txt  test_part_squares.txt  vessel_half.stl  vessel_half_offset.txt  vessel_quarter.stl
sim_config/endpoints/: endpoint_config.txt  endpoint_config_sparse.txt
sim_config/environments/: neuro_model.txt  neuro_model_channel.txt  neuro_model_tris.txt  simple_split.txt  test_part_squares.txt  vessel_half_offset.txt  vessel_quarter.txt
